--- a/oCsangoF.html
+++ b/oCsangoF.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <script>
-    let a = prompt('nhập vào độ C:');
-    alert('bằng số độ F:'a*9/5+32);
+    let a = +prompt('nhập vào độ C:');
+    alert('bằng số độ F:'+(a*9/5+32))
 </script>
 </body>
 </html>
